--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.rst
 include COPYING.txt
-recursive-include kotti_events *.mo *.pt *.txt
+recursive-include kotti_events *.mo *.pt *.txt *.css
 include development.ini
 include runtests.py
