--- a/development.ini
+++ b/development.ini
@@ -17,6 +17,6 @@ kotti.secret = qwerty
 kotti.configurators = kotti_events.kotti_configure
 
 [server:main]
-use = egg:Paste#http
+use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
