Update package environment.

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,5 +23,7 @@ addopts =
     --doctest-modules --doctest-glob='*.txt' --capture=no
     --cov=kotti_events --cov-report=term-missing
     --ignore=kotti_events/templates/
-    kotti_events/tests/
+    --strict
+    --pep8
+    kotti_events/
 python_files = test*py
